Red5 Changelog
==============

This file contains informations about the changes between the different
versions of Red5.

Red5 0.6    (unreleased)
------------------------
New features:
- Stream classes can be configured through red5-common.xml (Trac #223)

Bugfixes:
- serialize RecordSet objects (Trac #201)
- "NetConnection.Connect.Rejected" is sent for non-existing scopes to
  match result code of FCS/FMS
- RTMPT through Jetty working again (Trac #213)
- size of last frame is correctly written to .flv files
- errors during "connect" are reported back to client through RTMPT


Red5 0.6rc1 (2006-10-30)
------------------------
New features:
- Created WAR (Web Application Archive) version of Red5
  (Separate repository java/war)
- Enabled Tomcat or Jetty as J2EE container implementations
- FLV cache implementations (2 are included) (Trac #99)
- Scripting support (javascript, ruby, python, groovy, and bsh)
  based on Spring 2 and JSR223

Bugfixes:
- last frames aren't lost when reading .flv files (Trac #90)
- FileConsumer acted on all consumer pipe events (Trac #92)
- improved timestamps of live streams to be more in sync with FMS (Trac #93)
- FileConsumer modified position of incoming messages (Trac #91)
- Events should support reference counting (Trac #103)
- ServerStream playback jerky (Trac #77)
- "NetStream.send" events are properly recorded
- reusing streams works (Trac #123)
- fixed NPE if no bandwidth settings are available (Trac #129)
- "close" can be called on RTMPT connections multiple times (Trac #166)
- fixed synchronizing problem with clients publishing repeatedly (Trac #124)
- RTMPT connections can be closed from the serverside (Trac #179)


Red5 0.5    (2006-07-25)
------------------------
New features:
- frame dropping for live streams depending on available bandwidth
- added "receiveAudio", "receiveVideo" and "send" for streams
- destination of recorded streams can be customized (Trac #73)